# natural_language_data_parser

./: main.py  pyproject.toml
nldate/: __init__.py
src/nldate/: __init__.py
tests/: test_main.py
