[project]
name = "nldate"
version = "0.1.0"
description = "Natural language date parser library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.9.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

